@@ -18,59 +18,110 @@ import edu.wustl.catissuecore.domain.User;
 import edu.wustl.catissuecore.util.global.Constants;
 import edu.wustl.common.beans.SessionDataBean;
 import edu.wustl.common.exception.BizLogicException;
-import edu.wustl.common.util.Utility;
+import edu.wustl.common.util.global.CommonUtilities;
 import edu.wustl.common.util.logger.Logger;
 
+/**
+ * @author janhavi_hasabnis
+ *
+ */
 public class BulkOperationsBizlogic extends SpecimenEventParametersBizLogic
 {
-	private transient Logger logger = Logger.getCommonLogger(BulkOperationsBizlogic.class);
-	public void insertEvents(String operation, SessionDataBean sessionDataBean, List specimenIds, Long userId, String date, String timeInHours,
-			String timeInseconds, String comments, Map<String, String> eventSpecificData) throws BizLogicException
+
+	private transient final Logger logger = Logger.getCommonLogger(BulkOperationsBizlogic.class);
+
+	/**
+	 * @param operation - operation
+	 * @param sessionDataBean - SessionDataBean obj
+	 * @param specimenIds - list of specimen ids
+	 * @param userId - user Id
+	 * @param date - date
+	 * @param timeInHours - timeInHours
+	 * @param timeInseconds - timeInHours
+	 * @param comments - comments
+	 * @param eventSpecificData - map of eventSpecificData
+	 * @throws BizLogicException - BizLogicException
+	 */
+	public void insertEvents(String operation, SessionDataBean sessionDataBean, List specimenIds,
+			Long userId, String date, String timeInHours, String timeInseconds, String comments,
+			Map<String, String> eventSpecificData) throws BizLogicException
 	{
 		try
 		{
-			List eventObjects = getEventDomainObjects(operation, specimenIds, userId, date, timeInHours, timeInseconds, comments, eventSpecificData);
-			//IBizLogic bizLogic = BizLogicFactory.getInstance().getBizLogic(Constants.TRANSFER_EVENT_PARAMETERS_FORM_ID);
-			insert(eventObjects, sessionDataBean, 0);
+			final List eventObjects = this.getEventDomainObjects(operation, specimenIds, userId,
+					date, timeInHours, timeInseconds, comments, eventSpecificData);
+			// IBizLogic bizLogic =
+			// BizLogicFactory.getInstance().getBizLogic(Constants
+			// .TRANSFER_EVENT_PARAMETERS_FORM_ID);
+			this.insert(eventObjects, sessionDataBean, 0);
 
 		}
-		catch (ParseException exp)
+		catch (final ParseException exp)
 		{
-			logger.debug(exp.getMessage(), exp);
-			throw getBizLogicException(exp, "db.date.parse.error", "");
+			this.logger.debug(exp.getMessage(), exp);
+			throw this.getBizLogicException(exp, "db.date.parse.error", "");
 		}
 
 	}
 
-	private List getEventDomainObjects(String operation, List specimenIds, Long userId, String dateOfEvent, String timeInHours, String timeInseconds, String comments,
+	/**
+	 * @param operation - operation
+	 * @param specimenIds - list of specimen ids
+	 * @param userId - user Id
+	 * @param dateOfEvent - date of event
+	 * @param timeInHours - timeInHours
+	 * @param timeInseconds - timeInseconds
+	 * @param comments - comments
+	 * @param eventSpecificData - map of eventSpecificData
+	 * @return - list of events
+	 * @throws ParseException - ParseException
+	 */
+
+	private List getEventDomainObjects(String operation, List specimenIds, Long userId,
+			String dateOfEvent, String timeInHours, String timeInseconds, String comments,
 			Map<String, String> eventSpecificData) throws ParseException
 	{
 		List events;
-		if(operation.equals(Constants.BULK_TRANSFERS))
+		if (operation.equals(Constants.BULK_TRANSFERS))
 		{
-			events = getTransferEventObjects(specimenIds, userId, dateOfEvent, timeInHours, timeInseconds, comments, eventSpecificData);
+			events = this.getTransferEventObjects(specimenIds, userId, dateOfEvent, timeInHours,
+					timeInseconds, comments, eventSpecificData);
 		}
 		else
 		{
-			events = getDisposalEventObjects(specimenIds, userId, dateOfEvent, timeInHours, timeInseconds, comments, eventSpecificData);
+			events = this.getDisposalEventObjects(specimenIds, userId, dateOfEvent, timeInHours,
+					timeInseconds, comments, eventSpecificData);
 		}
 		return events;
 	}
 
-	private List getTransferEventObjects(List specimenIds, Long userId, String dateOfEvent, String timeInHours, String timeInseconds, String comments, Map<String, String> eventSpecificData) throws ParseException
+	/**
+	 * @param specimenIds - specimenIds
+	 * @param userId - userId
+	 * @param dateOfEvent - dateOfEvent
+	 * @param timeInHours - timeInHours
+	 * @param timeInseconds - timeInseconds
+	 * @param comments - comments
+	 * @param eventSpecificData - eventSpecificData
+	 * @return List
+	 * @throws ParseException - ParseException
+	 */
+	private List getTransferEventObjects(List specimenIds, Long userId, String dateOfEvent,
+			String timeInHours, String timeInseconds, String comments,
+			Map<String, String> eventSpecificData) throws ParseException
 	{
-		List<TransferEventParameters> events = new ArrayList<TransferEventParameters>();
+		final List<TransferEventParameters> events = new ArrayList<TransferEventParameters>();
 		TransferEventParameters transferEventParameters = null;
 		StorageContainer fromContainer = null;
 		StorageContainer toContainer = null;
 		String specimenId = null;
-		Specimen specimen = null;
 		for (int i = 0; i < specimenIds.size(); i++)
 		{
 			transferEventParameters = new TransferEventParameters();
-			specimenId = (String) specimenIds.get(i); 
-			setCommonEventParameters(specimenId, userId, dateOfEvent, timeInHours, timeInseconds, comments, transferEventParameters, i);
-			
+			specimenId = (String) specimenIds.get(i);
+			this.setCommonEventParameters(specimenId, userId, dateOfEvent, timeInHours,
+					timeInseconds, comments, transferEventParameters, i);
+
 			fromContainer = new StorageContainer();
 			if (eventSpecificData.get("ID_" + specimenId + "_FROMLOCID").equals(""))
 			{
@@ -81,9 +132,12 @@ public class BulkOperationsBizlogic extends SpecimenEventParametersBizLogic
 			}
 			else
 			{
-				fromContainer.setId(new Long(eventSpecificData.get("ID_" + specimenId + "_FROMLOCID")));
-				transferEventParameters.setFromPositionDimensionOne(Integer.valueOf(eventSpecificData.get("ID_" + specimenId + "_FROMLOCPOS1")));
-				transferEventParameters.setFromPositionDimensionTwo(Integer.valueOf(eventSpecificData.get("ID_" + specimenId + "_FROMLOCPOS2")));
+				fromContainer.setId(new Long(eventSpecificData.get("ID_" + specimenId
+						+ "_FROMLOCID")));
+				transferEventParameters.setFromPositionDimensionOne(Integer
+						.valueOf(eventSpecificData.get("ID_" + specimenId + "_FROMLOCPOS1")));
+				transferEventParameters.setFromPositionDimensionTwo(Integer
+						.valueOf(eventSpecificData.get("ID_" + specimenId + "_FROMLOCPOS2")));
 				transferEventParameters.setFromStorageContainer(fromContainer);
 			}
 
@@ -96,13 +150,26 @@ public class BulkOperationsBizlogic extends SpecimenEventParametersBizLogic
 		return events;
 	}
 
-	private void setCommonEventParameters(String specimenId, Long userId, String dateOfEvent, String timeInHours, String timeInseconds, String comments, SpecimenEventParameters eventParameters, int i) throws ParseException
+	/**
+	 * @param specimenId - specimenId
+	 * @param userId - userId
+	 * @param dateOfEvent - dateOfEvent
+	 * @param timeInHours - timeInHours
+	 * @param timeInseconds - timeInseconds
+	 * @param comments - comments
+	 * @param eventParameters - eventParameters
+	 * @param i - integer
+	 * @throws ParseException - ParseException
+	 */
+	private void setCommonEventParameters(String specimenId, Long userId, String dateOfEvent,
+			String timeInHours, String timeInseconds, String comments,
+			SpecimenEventParameters eventParameters, int i) throws ParseException
 	{
 		User user;
 		Specimen specimen;
 		user = new User();
 		user.setId(userId);
-		
+
 		eventParameters.setComment(comments);
 		eventParameters.setUser(user);
 
@@ -110,25 +177,39 @@ public class BulkOperationsBizlogic extends SpecimenEventParametersBizLogic
 		specimen.setId(new Long(specimenId));
 		eventParameters.setSpecimen(specimen);
 
-		Calendar calendar = Calendar.getInstance();
-		Date date = Utility.parseDate(dateOfEvent, Utility.datePattern(dateOfEvent));
+		final Calendar calendar = Calendar.getInstance();
+		final Date date = CommonUtilities.parseDate(dateOfEvent, CommonUtilities
+				.datePattern(dateOfEvent));
 		calendar.setTime(date);
 		calendar.set(Calendar.HOUR_OF_DAY, Integer.parseInt(timeInHours));
 		calendar.set(Calendar.MINUTE, Integer.parseInt(timeInseconds));
 		eventParameters.setTimestamp(calendar.getTime());
 	}
-	
-	private List getDisposalEventObjects(List specimenIds, Long userId, String dateOfEvent, String timeInHours, String timeInseconds, String comments, Map<String, String> eventSpecificData) throws ParseException
+
+	/**
+	 * @param specimenIds - specimenIds
+	 * @param userId - userId
+	 * @param dateOfEvent - dateOfEvent
+	 * @param timeInHours - timeInHours
+	 * @param timeInseconds - timeInseconds
+	 * @param comments - comments
+	 * @param eventSpecificData - eventSpecificData
+	 * @return List
+	 * @throws ParseException - ParseException
+	 */
+	private List getDisposalEventObjects(List specimenIds, Long userId, String dateOfEvent,
+			String timeInHours, String timeInseconds, String comments,
+			Map<String, String> eventSpecificData) throws ParseException
 	{
-		List<DisposalEventParameters> events = new ArrayList<DisposalEventParameters>();
+		final List<DisposalEventParameters> events = new ArrayList<DisposalEventParameters>();
 		DisposalEventParameters disposalEventParameters = null;
 		String specimenId = null;
-		Specimen specimen = null;
 		for (int i = 0; i < specimenIds.size(); i++)
 		{
 			disposalEventParameters = new DisposalEventParameters();
-			specimenId = (String) specimenIds.get(i); 
-			setCommonEventParameters(specimenId, userId, dateOfEvent, timeInHours, timeInseconds, comments, disposalEventParameters, i);
+			specimenId = (String) specimenIds.get(i);
+			this.setCommonEventParameters(specimenId, userId, dateOfEvent, timeInHours,
+					timeInseconds, comments, disposalEventParameters, i);
 			disposalEventParameters.setActivityStatus(eventSpecificData.get("ID_ALL_STATUS"));
 			disposalEventParameters.setReason(eventSpecificData.get("ID_ALL_REASON"));
 			events.add(disposalEventParameters);
